# sr25519-crust

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  docker-compose.yml  rust.cmake  sr25519Config-noconfig.cmake  sr25519Config.cmake
.github/: dependabot.yml
cmake/: dependencies.cmake  functions.cmake  rust.cmake  schnorrkelConfig.cmake  schnorrkel_crustConfig.cmake  sr25519Config.cmake
scripts/: install_dependencies.sh
src/: clib.rs  ed25519.rs  lib.rs  sr25519.rs
test/: CMakeLists.txt  derive.cpp  ds.cpp  keypair_from_seed.cpp  main.c  sign.cpp  utils.hpp  vrf.cpp
test/ed25519/: test.cpp
test/sr25519/: derive.cpp  ds.cpp  endianness_utils.hpp  keccak.c  keccak.h  keypair_from_seed.cpp  strobe.hpp  transcript.hpp  vrf.cpp
