[package]
name = "sr25519crust"
version = "0.2.0"
authors = ["Bogdan Vaneev <warchantua@gmail.com>", "Vladimir Shcherba <abrehchs@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "sr25519crust"
# probably we need to add dylib/lib/dll for mac/linux/windows
crate-type = ["cdylib", "staticlib"]

[dependencies]
schnorrkel = { version="0.9.1" }
ed25519-dalek = { version="1.0.0" }
rand_chacha = "0.2.2"

[dev-dependencies]
hex-literal = "0.3.1"
rand = "0.7"

[build-dependencies]
cbindgen = "0.14.0"
